--- a/order/order.html
+++ b/order/order.html
@@ -68,6 +68,9 @@
             </div>
           </div>
       </div>
+      <div class="btn-active">
+        <span>提交申请</span>
+      </div>
   </div>
   
 <script type="text/javascript" src="./index.js"></script>
